<resources>
    <string name="app_name">Florist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="florist">FLORIST</string>
    <string name="welcome">Welcome!</string>
    <string name="wedding">Wedding</string>
    <string name="decor">Decor</string>
    <string name="need_help">Need help?</string>
    <string name="make_an_appointment_and_or_chat_with_us">Make an appointment and or chat with us</string>
    <string name="calender">calender</string>
    <string name="bridal_bouquet">Bridal Bouquet</string>
    <string name="catalog">Catalog</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="title">Title</string>
    <string name="product_image">Product Image</string>
    <string name="price">price</string>
</resources>