<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/single_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_ve"
        app:layout_constraintStart_toStartOf="@id/guideline_vs"
        app:layout_constraintTop_toTopOf="@id/guideline_ht">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="265dp"
            android:layout_height="89dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="@id/constrain"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/constrain"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="top"
            android:maxLines="1"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="@id/constrain"
            app:layout_constraintTop_toBottomOf="@+id/product_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price"
            style="@style/mprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="top"
            android:maxLines="1"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />


        <View
            android:id="@+id/cart"
            style="@style/price"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/cart_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toEndOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/product_image"
            app:layout_constraintVertical_bias="0.285" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

